option('graphite', type : 'boolean', value : true, description : 'Sanitize Graphite tables')
option('variations', type : 'boolean', value : true, description : 'Sanitize OpenType Variation tables')
option('fuzzer_ldflags', type: 'string', description : 'Extra LDFLAGS used during linking of fuzzing binaries')
